Add the ability to read all rows from document and convert group of rows to columns