@@ -11,5 +11,5 @@ set "JAVA_HOME=C:\Users\aquan\.eclipse\oracleJdk-24"
 set "PATH=%PATH%;%JAVA_HOME%\bin"
 set "JAVA_OPTIONS="
 set "JAVA_FX_HOME="
-java -add-modules javafx.controls,javafx.fxml --module-path %JAVA_FX_HOME%\lib -jar %~dp0w2e-ui.jar
+java --add-modules javafx.controls,javafx.fxml --module-path %JAVA_FX_HOME%\lib -jar %~dp0w2e-ui.jar
 
